- Changed link default colors to more violet hues - Set overlay button height in 'em' - Fixed button hovering color for svg icons - Apply form button style to button or .rbtn (rich button) - Move form color styles from footer.scss to forms.scss - Make section colors in dark cyan like color - Set nav height in 'em' - Increase section background opacity - Added flex-center helper mixin - Center contents in navbar 'li' elements - Fix 'li' element and content width on layout break that switches to mobile mode nav

--- a/containers/preview-list.scss
+++ b/containers/preview-list.scss
@@ -5,7 +5,8 @@
 @use '../controls';
 
 //light-bg-highlight
-$preview-item-link-color: #009586 !default;
+//$preview-item-link-color: #009586 !default;
+$preview-item-link-color: #6e24ab !default;
 
 .preview-section-holder {
     //display: flex;
