--- a/controls/forms.scss
+++ b/controls/forms.scss
@@ -4,6 +4,8 @@
 
 
 $search-box-color-pair: rgba(#22cc99, 0.8) white !default;
+$footer-button-bg-color: #3ede81 !default;
+$input-shadow: 0px 0px 0.625em $footer-input-bg-color;
 
 .search-bar {
     width: 100%;
@@ -54,11 +56,16 @@ input[type=submit] {
     //display: none;
     //visibility: hidden;
 }
-form button {
-    @extend .light-button;   
+form button,.rbtn {
+    @extend .light-button;
     font-size: 1.8rem;
     padding: 1.0rem;
+    background-color: rgba($footer-button-bg-color, 0.6);
     /*.icon {
         height: 40px;
     }*/
+}
+
+form input, button, .rbtn {
+    box-shadow: $input-shadow;
 }
