--- a/controls/links.scss
+++ b/controls/links.scss
@@ -1,4 +1,5 @@
-$link-color: #009586 !default;
+//$link-color: #009586 !default;
+$link-color: #6700bb !default;
 
 @mixin colored-link-style($color: $link-color) {
     text-decoration: none;
