--- a/vars/_spacings.scss
+++ b/vars/_spacings.scss
@@ -5,7 +5,7 @@ $nav-text-font-size: 20px;
 $nav-logo-font-size: 20px;
 /*$nav-buttons-font-size: the;*/
 
-$nav-item-horizontal-height: 90px;
+$nav-item-horizontal-height: 5.6em;
 $nav-item-vertical-width: $nav-item-horizontal-height;
 $nav-initial-horizontal-margin-base: $navbar-children-spacing;
 $nav-initial-horizontal-links-margin-base: $navbar-menu-item-spacing;
